--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "primeflex": "^2.0.0",
     "primeicons": "^5.0.0",
     "primevue": "^3.9.1",
     "vue": "^3.2.22",
