--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0-alpha.32",
+    "@vuelidate/validators": "^2.0.0-alpha.25",
     "axios": "^0.24.0",
     "primeflex": "^2.0.0",
     "primeicons": "^5.0.0",
